# SCP-096

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Engine/: CMakeLists.txt
Engine/src/Engine/Application/: Application.cpp  Application.h
Engine/src/Engine/Events/: Event.h
Engine/src/Engine/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
Engine/src/Engine/Renderer/: Renderer.cpp  Renderer.h
Engine/src/Engine/Utilities/: Log.cpp  Log.h  Time.cpp  Time.h
Engine/src/Engine/Window/: Window.cpp  Window.h
Game/: CMakeLists.txt
Game/src/Game/: Game.cpp  Game.h  GameLayer.cpp  GameLayer.h
