cmake_minimum_required(VERSION 3.22)

project(SCP-096 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(ENABLE_ASAN "Enable AddressSanitizer" OFF)
option(ENABLE_UBSAN "Enable UndefinedBehaviorSanitizer" OFF)

set(ARCH_NAME ${CMAKE_SYSTEM_PROCESSOR})
if(ARCH_NAME MATCHES "AMD64|x86_64")
    set(ARCH_NAME "x86_64")
elseif(ARCH_NAME MATCHES "i386|i686")
    set(ARCH_NAME "x86")
endif()

set(OUTPUT_BASE "${CMAKE_SOURCE_DIR}/bin/$<CONFIG>-${CMAKE_SYSTEM_NAME}-${ARCH_NAME}")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_BASE}/${PROJECT_NAME}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_BASE}/${PROJECT_NAME}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_BASE}/${PROJECT_NAME}")

add_subdirectory(Engine)
add_subdirectory(Game)